# resiliency-skills

./: .gitignore  AGENTS.md  README.md  SECURITY.md  renovate.json
.claude/hooks/: session-start.sh
.github/: copilot-instructions.md
.github/agents/: sre-analyst.agent.md
.github/prompts/: sre-full-scan.prompt.md  sre-publish.prompt.md
.github/skills/assess-logging/: SKILL.md
.github/skills/assess-observability-coverage/: SKILL.md
.github/skills/assess-resiliency/: SKILL.md
.github/skills/assess-tech-stack/: SKILL.md
.github/skills/generate-alerts/: SKILL.md
.github/skills/generate-dashboards/: SKILL.md
.github/skills/generate-runbooks/: SKILL.md
.github/skills/generate-slos/: SKILL.md
.github/workflows/: release.yml  validate.yml
docs/: alert-intent-model.md  ownership-boundary.md  publish-path.md  roadmap.md  security.md  setup-and-permissions.md  versioning.md
engine/: pipeline.yaml  pyproject.toml
engine/schemas/: _provenance.md  alert-intent.schema.json  api-contracts.schema.json  architecture.schema.json  criticality.schema.json  dashboard.schema.json  delivery.schema.json  dependencies.schema.json  infrastructure.schema.json  jobs.schema.json  logging.schema.json  messaging.schema.json  observability-coverage.schema.json  pcf-deployment.schema.json  resiliency.schema.json  runbook-spec.schema.json  slo.schema.json  tech-stack.schema.json
engine/src/latent_sre/: __init__.py  appnames.py  assemble.py  cli.py  dashboard.py  hashdiff.py  mermaid.py  naming.py  paths.py  plan.py  redact.py  registry.py  render.py  runbook.py  scaffold.py  scanstate.py  templating.py  validate.py  yamlio.py
engine/templates/: runbook.md.j2
engine/templates/adapters/: appdynamics.j2  grafana.j2  prometheus.j2  splunk.j2  thousandeyes.j2  wavefront.j2
engine/templates/sre-repo/: CODEOWNERS.j2  README.md.j2  catalog-info.yaml.j2  gitignore.j2  pull_request_template.md.j2  renovate.json.j2  workflows-validate.yml.j2
engine/tests/: test_appnames.py  test_assemble.py  test_cli.py  test_dashboard.py  test_hashdiff.py  test_mermaid.py  test_plan.py  test_redact.py  test_registry.py  test_render.py  test_runbook.py  test_scaffold.py  test_tools.py  test_validate.py
examples/golden/: alert-intent.yaml  api-contracts.yaml  architecture.yaml  criticality.yaml  dashboard.yaml  delivery.yaml  dependencies.yaml  infrastructure.yaml  jobs.yaml  logging.yaml  messaging.yaml  observability-coverage.yaml  pcf-deployment.yaml  resiliency.yaml  runbook-spec.yaml  slo.yaml  tech-stack.yaml
examples/malicious/: AGENTS.md  README.md  manifest.yml
examples/sample-target/: README.md  manifest.yml  pom.xml
lib/: taxonomy.yaml
lib/signatures/: frameworks.yaml  messaging.yaml
scripts/: build-offline.sh
tools/: lint_skills.py  second_secret_gate.py
(+9 files in other folders)
