[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "latent-sre"
# Registered defensively on PyPI to prevent name-squatting (review item F4 / supply-chain).
version = "0.1.0"
description = "Deterministic transform engine for the SRE resiliency skills suite (render/validate/redact/scaffold)."
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "latent-sre" }]
# Pinned by SHA-256 via uv.lock at the consumption points (CI uses --require-hashes).
dependencies = [
    "jsonschema>=4.21,<5",
    "ruamel.yaml>=0.18,<0.19",
    "jinja2>=3.1,<4",
]

[project.scripts]
latent-sre = "latent_sre.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/latent_sre"]

# Ship schemas + adapter templates inside the wheel so `pip install latent-sre` works standalone
# (latent_sre/_data/...). The source layout (engine/schemas, engine/templates) is used in-repo;
# latent_sre/paths.py resolves whichever exists.
[tool.hatch.build.targets.wheel.force-include]
"schemas" = "latent_sre/_data/schemas"
"templates" = "latent_sre/_data/templates"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
